CHANGES
=======

x.x.x (XX-XX-XXXX)
------------------

- Setup uploaded filename if field value is binary and transfer
  encoding is not specified #349

0.15.3 (04-22-2015)
-------------------

- Fix graceful shutdown handling

- Fix `Expect` header handling for not found and not allowed routes #340


0.15.2 (04-19-2015)
-------------------

- Flow control subsystem refactoring

- Http server performace optimizations

- Allow to match any request method with `*`

- Explicitly call drain on transport #316

- Make chardet module dependency mandatory #318

- Support keep-alive for HTTP 1.0 #325

- Do not chunk single file during upload #327

- Add ClientSession object for cookie storage and default headers #328

- Add `keep_alive_on` argument for http server handler.


0.15.1 (03-31-2015)
-------------------

- Pass Autobahn Testsuit tests

- Fixed websocket fragmentation

- Fixed websocket close procedure

- Fixed parser buffer limits

- Added `timeout` parameter to WebSocketResponse ctor

- Added `WebSocketResponse.close_code` attribute


0.15.0 (03-27-2015)
-------------------

- Client WebSockets support

- New Multipart system #273

- Support for "Except" header #287 #267

- Set default Content-Type for post requests #184

- Fix issue with construction dynamic route with regexps and trailing slash #266

- Add repr to web.Request

- Add repr to web.Response

- Add repr for NotFound and NotAllowed match infos

- Add repr for web.Application

- Add repr to UrlMappingMatchInfo #217

- Gunicorn 19.2.x compatibility